Exp-2/output/hf-eval-data-v3-reuslt-34b-eval/f00834_extract_property_info.err
  File "./f00834_extract_property_info.py", line 63
    outputs_idx = outputs.
                         ^
SyntaxError: invalid syntax
